PROJECT(Moudle) 
				
CMAKE_MINIMUM_REQUIRED(VERSION "2.6") 

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(CMAKE_BUILE_TYPE DEBUG) 

IF(WIN32)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -m32") 
	SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -g -m32")
ENDIF()

ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(sources)